examples/test/testpolicy14868.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14868
  namespace: namespace430
spec:
  podSelector:
    matchLabels:
      key27: value25
      key49: value40
      key0: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key36: value19
          key3: value22
      podSelector:
        matchLabels:
          key43: value20
          key20: value13
          key0: value12
